--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@ and open the template in the editor.
             <button id="brush">brush</button>
             <button id="eraser">eraser</button>
             <button id="jump">jump</button>
-            <button id="backward"><<<</button>
+            <button id="backward">Roll Back</button>
             <button id="forward">>>></button>
         </div>
+        <h2 class="center">Draw on Canvas & hover over the button</h2>
         <script type="text/javascript" src="roll.js"></script>
     </body>
 </html>
